contrast fixer

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -3,10 +3,10 @@
 /* Alternative Color: #4F6367 */
 
 :root {
-    --mainthemecolor: #fd473a;
+    --mainthemecolor: #940a00;
     --supplementarythemecolor: #EEF5DB;
     --alternativethemecolor: #838383;
-    --white: #F2F8F8;
+    --white: #FFFFFF;
     --black: #0E1B1B;
 }
 
